objects/CSS_Fault_Code__c.object
<CustomObject>
    <fields>
        <fullName>Count__c</fullName>
        <description>Sums up the Generated Fault codes</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cummins_Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cummins Fault Code</label>
        <referenceTo>FSL_Fault_Code__c</referenceTo>
        <relationshipLabel>CSS Fault Code</relationshipLabel>
        <relationshipName>CSS_Fault_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSID__c</fullName>
        <formula>Job_Order__r.DSID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ECM</label>
        <referenceTo>CSS_ECM__c</referenceTo>
        <relationshipLabel>CSS Fault Code</relationshipLabel>
        <relationshipName>CSS_Fault_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ECM_mod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECM(mod)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVL_sequence__c</fullName>
        <description>This field stores the sequence for falut codes</description>
        <label>EVL_sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtField__c</fullName>
        <externalId>true</externalId>
        <label>ExtField</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FaultCodeR2__c</fullName>
        <label>FaultCodeR2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultCode__c</fullName>
        <description>Stores the value of the Fault code.</description>
        <formula>if(Fault_Code__r.Name != null,Fault_Code__r.Name,FaultCodeR2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FaultCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <formula>Cummins_Fault_Code__r.Cummins_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fault Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Type__c</fullName>
        <description>This field will store the fault code type whether it is Primary/Related/Active/Inactive</description>
        <label>Fault Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for selecting the fault code from Cached fault code master.</description>
        <inlineHelpText>Select the fault code</inlineHelpText>
        <label>Fault Code</label>
        <referenceTo>CSS_Fault_Code_Master__c</referenceTo>
        <relationshipLabel>CSS Fault Code</relationshipLabel>
        <relationshipName>Fault_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faultcode_Description__c</fullName>
        <formula>Cummins_Fault_Code__r.Name +&apos;-&apos; + Cummins_Fault_Code__r.Cummins_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faultcode/Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Name__c</fullName>
        <description>Stores the image related to fault code related to INSITE.</description>
        <label>Image Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to select the job order number from the Service Job Object.</description>
        <inlineHelpText>Select the Job Order Number</inlineHelpText>
        <label>Job Order</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Fault Code</relationshipLabel>
        <relationshipName>Fault_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lamp_Color__c</fullName>
        <description>Stores the Lamp color related to Fault Code related to INSITE.</description>
        <label>Lamp Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod__c</fullName>
        <description>Stores the Mod related to Fault Code related to INSITE.</description>
        <label>Mod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Solutions__c</fullName>
        <label>Number of Solutions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAT__c</fullName>
        <description>Stores the PAT related to Fault Code related to INSITE.</description>
        <label>PAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoleMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoleMessage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Fault_Code__c</fullName>
        <description>This field is used to show association of related fault to primary.</description>
        <label>Primary Fault Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prioritized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Prioritized Fault Codes</description>
        <label>Prioritized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedFaultCode__c</fullName>
        <description>Stores the Related Fault Code from INSITE.</description>
        <formula>IF( Related_Fault_Code__c ==&apos;&apos; ,&apos;None&apos; ,Related_Fault_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedFaultCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Fault_Code__c</fullName>
        <description>Captures the Related Fault Code  related to INSITE.</description>
        <label>Related Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>This field stores the sequence number</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS Fault Code</relationshipLabel>
        <relationshipName>CSS_Fault_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to store the Fault Code status.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is to store the Fault or Symptom classification</description>
        <inlineHelpText>Fault or Symptom classification</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fault</fullName>
                    <default>true</default>
                    <label>Fault</label>
                </value>
                <value>
                    <fullName>Symptom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isPole__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPole</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS Fault Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fault_Code_Type__c</columns>
        <columns>FaultCode__c</columns>
        <columns>Related_Fault_Code__c</columns>
        <columns>Sequence__c</columns>
        <columns>Job_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>isPole__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CSS_00000183</fullName>
        <columns>NAME</columns>
        <columns>Fault_Code_Type__c</columns>
        <columns>Job_Order__c</columns>
        <columns>Sequence__c</columns>
        <columns>FaultCode__c</columns>
        <columns>Related_Fault_Code__c</columns>
        <columns>Primary_Fault_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Order__c</field>
            <operation>equals</operation>
            <value>00351490</value>
        </filters>
        <label>CSS 00000183</label>
    </listViews>
    <listViews>
        <fullName>Fault_Code</fullName>
        <columns>NAME</columns>
        <columns>FaultCode__c</columns>
        <columns>Fault_Code__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Order__c</field>
            <operation>equals</operation>
            <value>CSS-00000183</value>
        </filters>
        <label>Fault Code</label>
    </listViews>
    <nameField>
        <label>Fault Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Fault Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FC_Symptom_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)  &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Cannot Edit FC/Symptom Name</errorMessage>
    </validationRules>
</CustomObject>